src/main/java/com/example/demo/error/EmptyFileException.java
package com.example.demo.error;

public class EmptyFileException extends RuntimeException {
    public EmptyFileException(String message) {
        super(message);
    }
}
